--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Rick&MortyApp">
+    <meta property="og:site_name" content="Rick&MortyApp">
+    <meta property="og:url" content="https://rickandmorty-b02c4.web.app/">
+    <meta property="og:image" content="https://rtvc-assets-radionica3.s3.amazonaws.com/s3fs-public/styles/image_750x424/public/field/image/article/rick-morty-pelicula.jpg?itok=thJFYqHN">
+    <meta property="article:published_time" content="2020-08-04">
+    <meta property="article:author" content="Bryan Ulises">
     <meta
       name="description"
       content="Web site created using create-react-app"
